--- a/batik/html/forum.html
+++ b/batik/html/forum.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="../css/index.css">
+    <link rel="stylesheet" href="../css/forum.css">
 </head>
 <body>
     <section id="main">
@@ -34,13 +34,12 @@
         </aside>
 
         <!-- logo content and some special animation -->
-        <div id="show-plc">
-            <div id="show-logo">
-
-            </div>
-            <div id="show-content">
-
-            </div>
+        <div id="forum-box">
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
         </div>
     </section>
 
