--- a/batik/html/forum.html
+++ b/batik/html/forum.html
@@ -35,11 +35,192 @@
 
         <!-- logo content and some special animation -->
         <div id="forum-box">
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
+            <div id="forum-left">
+                <div id="forum-editor"></div>
+                <div id="forum-content">
+                    <!-- comment adds here -->
+                    <div class="forum-comment">
+                        <div class="cmt-flag"></div>
+                        <div class="cmt-main">
+                            <div class="user-bio">
+                                <div class="user-pto"></div>
+                                <div class="user-info">
+                                    <div class="user-name">Jerome</div>
+                                    <div class="user-tag">a / b / c</div>
+                                </div>
+                            </div>
+                            <div class="cmt-content">
+                                aasidjiasjdiasjdiajsidajsidjasidjiasjdiasjidiasjdiasjdijsaidjiasjdiasidnasindasjdijasidjaisjdiasjdijasidjaisjdiasjdijsadijasidjaisdjiasjdiasjdiasjdijaisdjaisdjaisjdiasjdiasjdiajsdijasifjaifjijasdijd
+                            </div>
+                        </div>
+                    </div>
+                    <div class="forum-comment">
+                        <div class="cmt-flag"></div>
+                        <div class="cmt-main">
+                            <div class="user-bio">
+                                <div class="user-pto"></div>
+                                <div class="user-info">
+                                    <div class="user-name">Jerome</div>
+                                    <div class="user-tag">a / b / c</div>
+                                </div>
+                            </div>
+                            <div class="cmt-content">
+                                aasidjiasjdiasjdiajsidajsidjasidjiasjdiasjidiasjdiasjdijsaidjiasjdiasidnasindasjdijasidjaisjdiasjdijasidjaisjdiasjdijsadijasidjaisdjiasjdiasjdiasjdijaisdjaisdjaisjdiasjdiasjdiajsdijasifjaifjijasdijd
+                            </div>
+                        </div>
+                    </div>
+                    <div class="forum-comment">
+                        <div class="cmt-flag"></div>
+                        <div class="cmt-main">
+                            <div class="user-bio">
+                                <div class="user-pto"></div>
+                                <div class="user-info">
+                                    <div class="user-name">Jerome</div>
+                                    <div class="user-tag">a / b / c</div>
+                                </div>
+                            </div>
+                            <div class="cmt-content">
+                                aasidjiasjdiasjdiajsidajsidjasidjiasjdiasjidiasjdiasjdijsaidjiasjdiasidnasindasjdijasidjaisjdiasjdijasidjaisjdiasjdijsadijasidjaisdjiasjdiasjdiasjdijaisdjaisdjaisjdiasjdiasjdiajsdijasifjaifjijasdijd
+                            </div>
+                        </div>
+                    </div>
+                    <div class="forum-comment">
+                        <div class="cmt-flag"></div>
+                        <div class="cmt-main">
+                            <div class="user-bio">
+                                <div class="user-pto"></div>
+                                <div class="user-info">
+                                    <div class="user-name">Jerome</div>
+                                    <div class="user-tag">a / b / c</div>
+                                </div>
+                            </div>
+                            <div class="cmt-content">
+                                aasidjiasjdiasjdiajsidajsidjasidjiasjdiasjidiasjdiasjdijsaidjiasjdiasidnasindasjdijasidjaisjdiasjdijasidjaisjdiasjdijsadijasidjaisdjiasjdiasjdiasjdijaisdjaisdjaisjdiasjdiasjdiajsdijasifjaifjijasdijd
+                            </div>
+                        </div>
+                    </div>
+                    <div class="forum-comment">
+                        <div class="cmt-flag"></div>
+                        <div class="cmt-main">
+                            <div class="user-bio">
+                                <div class="user-pto"></div>
+                                <div class="user-info">
+                                    <div class="user-name">Jerome</div>
+                                    <div class="user-tag">a / b / c</div>
+                                </div>
+                            </div>
+                            <div class="cmt-content">
+                                aasidjiasjdiasjdiajsidajsidjasidjiasjdiasjidiasjdiasjdijsaidjiasjdiasidnasindasjdijasidjaisjdiasjdijasidjaisjdiasjdijsadijasidjaisdjiasjdiasjdiasjdijaisdjaisdjaisjdiasjdiasjdiajsdijasifjaifjijasdijd
+                            </div>
+                        </div>
+                    </div>
+                    <div class="forum-comment">
+                        <div class="cmt-flag"></div>
+                        <div class="cmt-main">
+                            <div class="user-bio">
+                                <div class="user-pto"></div>
+                                <div class="user-info">
+                                    <div class="user-name">Jerome</div>
+                                    <div class="user-tag">a / b / c</div>
+                                </div>
+                            </div>
+                            <div class="cmt-content">
+                                aasidjiasjdiasjdiajsidajsidjasidjiasjdiasjidiasjdiasjdijsaidjiasjdiasidnasindasjdijasidjaisjdiasjdijasidjaisjdiasjdijsadijasidjaisdjiasjdiasjdiasjdijaisdjaisdjaisjdiasjdiasjdiajsdijasifjaifjijasdijd
+                            </div>
+                        </div>
+                    </div>
+                    <div class="forum-comment">
+                        <div class="cmt-flag"></div>
+                        <div class="cmt-main">
+                            <div class="user-bio">
+                                <div class="user-pto"></div>
+                                <div class="user-info">
+                                    <div class="user-name">Jerome</div>
+                                    <div class="user-tag">a / b / c</div>
+                                </div>
+                            </div>
+                            <div class="cmt-content">
+                                aasidjiasjdiasjdiajsidajsidjasidjiasjdiasjidiasjdiasjdijsaidjiasjdiasidnasindasjdijasidjaisjdiasjdijasidjaisjdiasjdijsadijasidjaisdjiasjdiasjdiasjdijaisdjaisdjaisjdiasjdiasjdiajsdijasifjaifjijasdijd
+                            </div>
+                        </div>
+                    </div>
+                    <div class="forum-comment">
+                        <div class="cmt-flag"></div>
+                        <div class="cmt-main">
+                            <div class="user-bio">
+                                <div class="user-pto"></div>
+                                <div class="user-info">
+                                    <div class="user-name">Jerome</div>
+                                    <div class="user-tag">a / b / c</div>
+                                </div>
+                            </div>
+                            <div class="cmt-content">
+                                aasidjiasjdiasjdiajsidajsidjasidjiasjdiasjidiasjdiasjdijsaidjiasjdiasidnasindasjdijasidjaisjdiasjdijasidjaisjdiasjdijsadijasidjaisdjiasjdiasjdiasjdijaisdjaisdjaisjdiasjdiasjdiajsdijasifjaifjijasdijd
+                            </div>
+                        </div>
+                    </div>
+                    <div class="forum-comment">
+                        <div class="cmt-flag"></div>
+                        <div class="cmt-main">
+                            <div class="user-bio">
+                                <div class="user-pto"></div>
+                                <div class="user-info">
+                                    <div class="user-name">Jerome</div>
+                                    <div class="user-tag">a / b / c</div>
+                                </div>
+                            </div>
+                            <div class="cmt-content">
+                                aasidjiasjdiasjdiajsidajsidjasidjiasjdiasjidiasjdiasjdijsaidjiasjdiasidnasindasjdijasidjaisjdiasjdijasidjaisjdiasjdijsadijasidjaisdjiasjdiasjdiasjdijaisdjaisdjaisjdiasjdiasjdiajsdijasifjaifjijasdijd
+                            </div>
+                        </div>
+                    </div>
+                    <div class="forum-comment">
+                        <div class="cmt-flag"></div>
+                        <div class="cmt-main">
+                            <div class="user-bio">
+                                <div class="user-pto"></div>
+                                <div class="user-info">
+                                    <div class="user-name">Jerome</div>
+                                    <div class="user-tag">a / b / c</div>
+                                </div>
+                            </div>
+                            <div class="cmt-content">
+                                aasidjiasjdiasjdiajsidajsidjasidjiasjdiasjidiasjdiasjdijsaidjiasjdiasidnasindasjdijasidjaisjdiasjdijasidjaisjdiasjdijsadijasidjaisdjiasjdiasjdiasjdijaisdjaisdjaisjdiasjdiasjdiajsdijasifjaifjijasdijd
+                            </div>
+                        </div>
+                    </div>
+                    <div class="forum-comment">
+                        <div class="cmt-flag"></div>
+                        <div class="cmt-main">
+                            <div class="user-bio">
+                                <div class="user-pto"></div>
+                                <div class="user-info">
+                                    <div class="user-name">Jerome</div>
+                                    <div class="user-tag">a / b / c</div>
+                                </div>
+                            </div>
+                            <div class="cmt-content">
+                                aasidjiasjdiasjdiajsidajsidjasidjiasjdiasjidiasjdiasjdijsaidjiasjdiasidnasindasjdijasidjaisjdiasjdijasidjaisjdiasjdijsadijasidjaisdjiasjdiasjdiasjdijaisdjaisdjaisjdiasjdiasjdiajsdijasifjaifjijasdijd
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div id="forum-right">
+                <div id="forum-hotpic">
+                    <div class="hotpic-img"></div>
+                    <div class="hotpic-info">
+                        <div class="hotpic-ttl">
+                            blue
+                        </div>
+                        <div class="hotpic-content">
+                            this is a blue box, no other items in it, just a blue box for test.
+                        </div>
+                    </div>
+                </div>
+                
+            </div>
+            <div class="share"></div>
         </div>
     </section>
 
