navigation index page complete

--- a/batik/html/navindex.html
+++ b/batik/html/navindex.html
@@ -10,43 +10,78 @@
     <div id="header">
 
     </div>
-    
+
     <div id="top-gallery">
-        <ul>
-            <li>
-                <div id="glr-1"></div>
-            </li>
-            <li>
-                <div id="glr-2"></div>
-            </li>
-            <li>
-                <div id="glr-3"></div>
-            </li>
-            <li>
-                <div id="glr-4"></div>
-            </li>
-            <li>
-                <div id="glr-5"></div>
-            </li>
-            <li>
-                <div id="glr-6"></div>
-            </li>
-            <li>
-                <div id="glr-7"></div>
-            </li>
-            <li>
-                <div id="glr-8"></div>
-            </li>
-            <li>
-                <div id="glr-9"></div>
-            </li>
-            <li>
-                <div id="glr-10"></div>
-            </li>
-        </ul>
+        <div id="scroll">
+            <ul>
+                <li>
+                    <div></div>
+                </li>
+                <li>
+                    <div></div>
+                </li>
+                <li>
+                    <div></div>
+                </li>
+                <li>
+                    <div></div>
+                </li>
+                <li>
+                    <div></div>
+                </li>
+                <li>
+                    <div></div>
+                </li>
+                <li>
+                    <div></div>
+                </li>
+                <li>
+                    <div></div>
+                </li>
+                <li>
+                    <div></div>
+                </li>
+                <li>
+                    <div></div>
+                </li>
+                <li>
+                    <div></div>
+                </li>
+                <li>
+                    <div></div>
+                </li>
+                <li>
+                    <div></div>
+                </li>
+                <li>
+                    <div></div>
+                </li>
+                <li>
+                    <div></div>
+                </li>
+                <li>
+                    <div></div>
+                </li>
+                <li>
+                    <div></div>
+                </li>
+                <li>
+                    <div></div>
+                </li>
+                <li>
+                    <div></div>
+                </li>
+                <li>
+                    <div></div>
+                </li>
+            </ul>
+        </div>
     </div>
 
     <div id="main">
+        <div id="detl">
+            
+        </div>
         <div id="menu">
         <ul>
             <li>
