--- a/batik-web/html/gallery.html
+++ b/batik-web/html/gallery.html
@@ -10,21 +10,50 @@
     <link rel="stylesheet" href="../css/gallery.css">
 </head>
 <body>
+    <!-- body has a background image -->
+    <section id="bgimage" class="fl">
+        <img src="../upload/gallery-bg.png" alt="">
+    </section>
+
+    <!-- level-0 mask -->
+    <section class="mask fl"></section>
+
+    <!-- level-2 content and bottom bar -->
     <section id="main-content">
-        <section id="head-title">
-            <div class="w10 back fl"></div>
+
+        <section id="headline">
+            <div class="w10 back fl">
+                <em class="icomoon"></em>
+            </div>
             <div class="w80 title fl">
                 Indonesian Batik Gallery
             </div>
-            <div class="w10 renew fl"></div>
+            <div class="w10 renew fl">
+                <em class="icomoon"></em>
+            </div>
         </section>
+
         <section id="gallery">
-            <div class="batik-demo fl b-d-1"></div>
-            <div class="batik-demo fl b-d-2"></div>
-            <div class="batik-demo fl b-d-3"></div>
-            <div class="batik-demo fl b-d-4"></div>
-            <div class="batik-demo fl b-d-5"></div>
-            <div class="batik-demo fl b-d-6"></div>
+            <div class="demo-box">
+                <div class="batik-demo fl b-d-1">
+                    <img src="../upload/gallery-1.png" alt="">
+                </div>
+                <div class="batik-demo fl b-d-2">
+                    <img src="../upload/gallery-2.png" alt="">
+                </div>
+                <div class="batik-demo fl b-d-3">
+                    <img src="../upload/gallery-3.png" alt="">
+                </div>
+                <div class="batik-demo fl b-d-4">
+                    <img src="../upload/gallery-4.png" alt="">
+                </div>
+                <div class="batik-demo fl b-d-5">
+                    <img src="../upload/gallery-5.png" alt="">
+                </div>
+                <div class="batik-demo fl b-d-6">
+                    <img src="../upload/gallery-6.png" alt="">
+                </div>
+            </div>
         </section>
     </section>
     <section id="bottom-bar">
