--- a/batik-web/html/featuredarticles.html
+++ b/batik-web/html/featuredarticles.html
@@ -99,11 +99,18 @@
             <div class="icon fl"><em class="icomoon"></em></div>
             <div class="icon fl"><em class="icomoon"></em></div>
             <div class="icon fl"><em class="icomoon"></em></div>
-            <div class="icon fl"><em class="icomoon"></em></div>
+            <div class="icon fl sound-btn"><em class="icomoon"></em></div>
         </section>
+        <div class="sound-ctrl fl">
+            <div class="plus fl ">+</div>
+            <div class="volume fl ">5</div>
+            <div class="minus fl ">-</div>
+        </div>
         <section id="copyright" class="fr">
             @copyright by Jerome
         </section>
     </section>
+    <script src="../js/lineheight.js"></script>
+    <script src="../js/bottombar.js"></script>
 </body>
 </html>
