--- a/batik-web/html/story2.html
+++ b/batik-web/html/story2.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WIB</title>
+    <title>Motifs</title>
     <link rel="stylesheet" href="../css/bottom-bar.css">
     <link rel="stylesheet" href="../css/default.css">
-    <link rel="stylesheet" href="../css/story1.css">
+    <link rel="stylesheet" href="../css/story2.css">
     <link rel="stylesheet" href="../css/icomoon.css">
 
 </head>
@@ -25,13 +25,10 @@
 
                 <!-- level-2 -->
                 <div class="video-title">
-                    What is Batik?
+                    Motifs
                 </div>
                 <div class="video-content">
-                    We choose batik as the theme of our project. The word batik is derived from the Javanese word “ambatik” in origin, where  amba is a verb. It means"to write" and titik is a noun that means "dot". 
-                    <br/>
-                    <br/>
-                    Batik is the technically and artistically demanding tradition of wax-resist dyeing (aka Laweyan ) . And it also refers to the cloth made using this technique. 
+                    There are maybe thousands of batik designs, many of them have special cultural significance. Scholars agreed that Javanese batik has been an extraordinarily dynamic art form, since it’s assimilating/intaking a myriad of inspirations and styles from other cultures.
                 </div>
                 <div class="play-button">
                     PLAY VIDEO
@@ -58,21 +55,15 @@
         <section id="huge-right" class="fl">
             <section id="small-widgets-right">
                 <div class="small-high-widget widget-3">
-                    <div class="sketchfab-embed-wrapper">
-                        <iframe title="A 3D model" src="https://sketchfab.com/models/967f791229f041618e9c67eaa7262b54/embed?autostart=0&amp;camera=0&amp;ui_controls=0&amp;ui_infos=0&amp;ui_inspector=0&amp;ui_stop=0&amp;ui_watermark=1&amp;ui_watermark_link=1" 
-                        frameborder="0" allow="autoplay; fullscreen; vr" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
-                        <p style="font-size: 13px; font-weight: normal; margin: 5px; color: #4A4A4A;">
-                            <a href="https://sketchfab.com/3d-models/batik-textile-967f791229f041618e9c67eaa7262b54?utm_medium=embed&utm_source=website&utm_campaign=share-popup" target="_blank" style="font-weight: bold; color: #1CAAD9;">Batik Textile</a>
-                            by <a href="https://sketchfab.com/bodyasechoes?utm_medium=embed&utm_source=website&utm_campaign=share-popup" target="_blank" style="font-weight: bold; color: #1CAAD9;">Body As Echoes</a>
-                            on <a href="https://sketchfab.com?utm_medium=embed&utm_source=website&utm_campaign=share-popup" target="_blank" style="font-weight: bold; color: #1CAAD9;">Sketchfab</a>
-                        </p>
-                    </div>
-                    
+                    <img src="../upload/story-1-w-3.png" alt="" class="widget-bg">
+                    <p class="widget-title w-t-3">
+                        <em class="icomoon"></em>
+                    </p>
                 </div>
                 <div class="small-high-widget widget-4">
                     <img src="../upload/story-1-w-4.png" alt="" class="widget-bg">
                     <p class="widget-title w-t-4">
-                        Making Process
+                        Tools
                     </p>
                 </div>
             </section>
@@ -96,14 +87,7 @@
             @copyright by Jerome
         </section>
     </section>
-    <p class="back">
-        <em class="icomoon"></em>
-    </p>
-    <p class="forward gotosty2">
-        <em class="icomoon"></em>
-    </p>
     <script src="../js/lineheight.js"></script>
     <script src="../js/bottombar.js"></script>
-    <script src="../js/sty1.js"></script>
 </body>
 </html>
