--- a/batik-web/html/gallery.html
+++ b/batik-web/html/gallery.html
@@ -21,7 +21,7 @@
     <!-- level-2 content and bottom bar -->
     <section id="main-content">
 
-        <section id="headline">
+        <section id="headline" class="line-height">
             <div class="w10 back fl">
                 <em class="icomoon"></em>
             </div>
@@ -57,15 +57,22 @@
         </section>
     </section>
     <section id="bottom-bar">
-        <section id="navigation" class="fl">
+        <section id="navigation" class="fl line-height">
             <div class="icon fl"><em class="icomoon"></em></div>
             <div class="icon fl"><em class="icomoon"></em></div>
             <div class="icon fl"><em class="icomoon"></em></div>
-            <div class="icon fl"><em class="icomoon"></em></div>
+            <div class="icon fl sound-btn"><em class="icomoon"></em></div>
         </section>
-        <section id="copyright" class="fr">
+        <div class="sound-ctrl fl">
+            <div class="plus fl ">+</div>
+            <div class="volume fl ">5</div>
+            <div class="minus fl ">-</div>
+        </div>
+        <section id="copyright" class="fr line-height">
             @copyright by Jerome
         </section>
     </section>
+    <script src="../js/lineheight.js"></script>
+    <script src="../js/bottombar.js"></script>
 </body>
 </html>
