--- a/batik-web/html/indexexp.html
+++ b/batik-web/html/indexexp.html
@@ -35,26 +35,26 @@
                 <img src="../upload/index-topic.png" alt="">
             </div>
             <!-- level-2 -->
-            <div id="main-title">
+            <div id="main-title" class="line-height">
                 Indonesian Batik
             </div>
             <ul class="center-nav">
-                <li class="ct-nav-box cnbox1">
+                <li class="ct-nav-box cnbox1 line-height exp">
                     <div class="mask">
                         Featured Content
                     </div>
                 </li>
-                <li class="ct-nav-box cnbox2">
+                <li class="ct-nav-box cnbox2 line-height exp">
                     <div class="mask">
                         Gallery
                     </div>
                 </li>
-                <li class="ct-nav-box cnbox3">
+                <li class="ct-nav-box cnbox3 line-height exp">
                     <div class="mask">
                         Workshop
                     </div>
                 </li>
-                <li class="ct-nav-box cnbox4">
+                <li class="ct-nav-box cnbox4 line-height exp">
                     <div class="mask">
                         Forum
                     </div>
@@ -63,15 +63,24 @@
         </section>
     </section>
     <section id="bottom-bar">
-        <section id="navigation" class="fl">
+        <section id="navigation" class="fl line-height">
             <div class="icon fl"><em class="icomoon"></em></div>
             <div class="icon fl"><em class="icomoon"></em></div>
             <div class="icon fl"><em class="icomoon"></em></div>
-            <div class="icon fl"><em class="icomoon"></em></div>
+            <div class="icon fl sound-btn"><em class="icomoon"></em></div>
         </section>
-        <section id="copyright" class="fr">
+        <div class="sound-ctrl fl">
+            <div class="plus fl ">+</div>
+            <div class="volume fl ">5</div>
+            <div class="minus fl ">-</div>
+        </div>
+        <section id="copyright" class="fr line-height">
             @copyright by Jerome
         </section>
     </section>
+    <script src="../js/lineheight.js"></script>
+    <script src="../js/bottombar.js"></script>
+    <script src="../js/index.js"></script>
+    <script src="../js/exp.js"></script>
 </body>
 </html>
