--- a/batik-web/html/indexsty.html
+++ b/batik-web/html/indexsty.html
@@ -35,43 +35,52 @@
                 <img src="../upload/index-topic.png" alt="">
             </div>
             <!-- level-2 -->
-            <div id="main-title">
+            <div id="main-title" class="line-height">
                 Indonesian Batik
             </div>
             <ul class="center-nav">
                 <li class="ct-nav-box cnbox1">
-                    <div class="mask">
-                        Featured Content
+                    <div class="mask line-height sty">
+                        Story 1
                     </div>
                 </li>
                 <li class="ct-nav-box cnbox2">
-                    <div class="mask">
-                        Gallery
+                    <div class="mask line-height sty">
+                        Story 2
                     </div>
                 </li>
                 <li class="ct-nav-box cnbox3">
-                    <div class="mask">
-                        Workshop
+                    <div class="mask line-height sty">
+                        Story 3
                     </div>
                 </li>
                 <li class="ct-nav-box cnbox4">
-                    <div class="mask">
-                        Forum
+                    <div class="mask line-height sty">
+                        Story 4
                     </div>
                 </li>
             </ul>
         </section>
     </section>
     <section id="bottom-bar">
-        <section id="navigation" class="fl">
+        <section id="navigation" class="fl line-height">
             <div class="icon fl"><em class="icomoon"></em></div>
             <div class="icon fl"><em class="icomoon"></em></div>
             <div class="icon fl"><em class="icomoon"></em></div>
-            <div class="icon fl"><em class="icomoon"></em></div>
+            <div class="icon fl sound-btn"><em class="icomoon"></em></div>
         </section>
-        <section id="copyright" class="fr">
+        <div class="sound-ctrl fl">
+            <div class="plus fl ">+</div>
+            <div class="volume fl ">5</div>
+            <div class="minus fl ">-</div>
+        </div>
+        <section id="copyright" class="fr line-height">
             @copyright by Jerome
         </section>
     </section>
+    <script src="../js/lineheight.js"></script>
+    <script src="../js/bottombar.js"></script>
+    <script src="../js/index.js"></script>
+    <script src="../js/sty.js"></script>
 </body>
 </html>
