--- a/batik-web/html/indexsty.html
+++ b/batik-web/html/indexsty.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Index-Story</title>
+    <link rel="stylesheet" href="../css/fonts.css">
     <link rel="stylesheet" href="../css/bottom-bar.css">
     <link rel="stylesheet" href="../css/default.css">
     <link rel="stylesheet" href="../css/icomoon.css">
@@ -11,6 +12,10 @@
 
 </head>
 <body>
+    <audio id="bgm" autoplay="autoplay" loop="loop" preload="auto">
+        <source src="../upload/bgm.mpeg" type="audio/mpeg">
+    </audio>
+    
     <section id="main-content">
         <section id="left-nav" class="fl">
             <!-- level-0 -->
